# SAF-MS

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
configs/: default.yaml
docs/: data-format.md  reproducibility.md
examples/: smoke_test.py
scripts/: decode.py  encode.py  evaluate.py  train.py
src/saf_ms/: __init__.py  config.py  distributions.py  flow_layers.py  model.py  rans.py  workflows.py
src/sparse_ms_flow/: __init__.py  attention.py  codec.py  conditioner.py  config.py  data.py  distributions.py  model.py  workflows.py
tests/: test_attention.py  test_cli.py  test_codec.py  test_conditioner.py  test_config.py  test_data.py  test_flow.py  test_package.py  test_workflows.py
