[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-ms-flow"
version = "0.1.0"
description = "SAF-MS sparse-attention integer flows for proteomics mass spectrometry data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "SparseMSFlow Contributors" }]
keywords = ["mass-spectrometry", "lossless-compression", "integer-flow", "sparse-attention", "rans"]
dependencies = [
    "numpy>=1.24",
    "PyYAML>=6.0",
    "torch>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = ["LICENSE", "THIRD_PARTY_LICENSES/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
